<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12sp"
    android:gravity="center_vertical"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menuinfo"
        android:onClick="ClickMenu"
        android:src="@drawable/menu" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nav_app"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#514C4C"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/exploremore"
        android:src="@drawable/more" />









</LinearLayout>






