<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/automobile_logo"
        android:onClick="ClickLogo"
        android:src="@drawable/logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigation_app"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#757070"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#777272"/>
    
    <LinearLayout
        android:id="@+id/applayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickHome"
        tools:ignore="UseCompoundDrawables">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/home"
        android:padding="12dp"
        android:layout_marginStart="16dp"
            tools:ignore="InefficientWeight" />

        <ImageView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:contentDescription="@string/homeinfo"
            android:src="@drawable/home_icon" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickDashboard"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dashboard"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            tools:ignore="InefficientWeight" />

        <ImageView
            android:id="@+id/board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:contentDescription="@string/dashboard"
            android:src="@drawable/dashboard"/>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickProfile"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            tools:ignore="InefficientWeight" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/account_box"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickLogout"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            tools:ignore="InefficientWeight" />

        <ImageView
            android:id="@+id/Signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:contentDescription="@string/logout"
            android:src="@drawable/exit_to_app"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/Emergency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickHelp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            tools:ignore="InefficientWeight" />

        <ImageView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:contentDescription="@string/help"
            android:src="@drawable/ic_baseline_help_center_24"/>



    </LinearLayout>





</LinearLayout>